Corrected two typos in translation keys

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1396,7 +1396,7 @@ en:
       you_must_fill_all_the_fields: "You must fill all the fields"
       you_unfollowed_listing: "You are no longer following this listing"
       joining_community_failed: "Joining failed"
-      can_not_login_with_private_user: "You cannot log in with your personal account. Log in with organization account or create a new account."
+      can_not_login_with_private_user: "You cannot log in with your personal account. Log in with an organization account or create a new account."
       can_not_delete_email: "You cannot remove the email address"
       user_does_not_have_email_to_delete: "You don't have the email address you're trying to remove"
       email_deleted: "Email removed"
@@ -1768,7 +1768,7 @@ en:
       paypal_info_link_text: "PayPal's payment processing fee"
       billing_agreement_description: "Grant %{service_name} permission to charge a transaction fee."
       billing_agreement: "Grant permission"
-      permissions_not_granted: "Permission to connect with your PayPal account were not granted."
+      permissions_not_granted: "Permissions to connect with your PayPal account were not granted."
       could_not_fetch_redirect_url: "Could not fetch redirect URL to connect with PayPal."
       paypal_not_enabled: "PayPal payments are not enabled."
       billing_agreement_canceled: "The billing agreement was canceled"
